# scaleeval

./: README.md  setup.cfg
criteria/: metaeval_creativity.yaml  metaeval_helpfulness.yaml  metaeval_interpretability.yaml  metaeval_reasoning.yaml
scaleeval/: anthropic_api.py  config.yaml  evaluation.py  openai_api.py  prompt_input.py
scaleeval/responses/claude-instant/: brainstorming.jsonl  code.jsonl  dialog.jsonl  judgement.jsonl  math.jsonl  opendomain_general.jsonl  opendomain_science.jsonl  write.jsonl
scaleeval/responses/gemini/: brainstorming.jsonl  code.jsonl  dialog.jsonl  judgement.jsonl  math.jsonl  opendomain_general.jsonl  opendomain_science.jsonl  write.jsonl
scaleeval/responses/gpt3.5/: brainstorming.jsonl  code.jsonl  dialog.jsonl  judgement.jsonl  math.jsonl  opendomain_general.jsonl  opendomain_science.jsonl  write.jsonl
scaleeval/results/claude_vs_gemini/creativity/claude2_score/: brainstorming.jsonl  dialog.jsonl  judgement.jsonl  write.jsonl
scaleeval/results/claude_vs_gemini/creativity/gpt35_turbo_score/: brainstorming.jsonl  dialog.jsonl  judgement.jsonl  write.jsonl
scaleeval/results/claude_vs_gemini/creativity/gpt4_turbo_score/: brainstorming.jsonl  dialog.jsonl  judgement.jsonl  write.jsonl
scaleeval/results/claude_vs_gemini/creativity/multiagent_score/: brainstorming.jsonl  dialog.jsonl  write.jsonl
scaleeval/results/claude_vs_gemini/helpfulness/claude2_score/: brainstorming.jsonl  code.jsonl  dialog.jsonl  judgement.jsonl  math.jsonl  opendomain_general.jsonl  (+2 more)
utils/LLMs/api/: bard.py  claude.py  gemini.py  gpt3.5.py
(+145 files in other folders)
