[metadata]
name = scaleeval
version = attr: version.__version__
description = Scalable Meta-Evaluation of LLMs as Evaluators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GAIR-NLP/scaleeval
author = GAIR Research Group
license = Apache License
classifiers =
    Intended Audience :: Developers
    Topic :: Text Processing
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = True
install_requires =
    nltk>=3.2
    numpy
    scipy
    matplotlib
    scikit-learn
    pandas
    pre-commit
    tqdm
    openai
    anthropic
    absl-py


[options.package_data]
scaleeval.metrics.protocols = *.yaml



[flake8]
application-import-names = scaleeval
exclude = __pycache__, datasets
extend-ignore = E203, BLK100, W503, FI10, FI11, FI12, FI13, FI14, FI15, FI16, FI17, FI58
filename = ./scaleeval/*.py, ./setup.py
max-line-length = 88

[isort]
filter_files = true
force_sort_within_sections = true
multi_line_output = 3
order_by_type = false
profile = black
src_paths = scaleeval
